Update Spring Boot version and allow bean definition overridingUpdate Spring Boot version and allow bean definition overriding